--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,15 @@ schedules:
     - master
   always: true
 
-steps:
-- powershell: |
-   curl \
-     -X PUT \
-     -H "Accept: application/vnd.github.v3+json" \
-     https://api.github.com/orgs/PermissionsSpike/teams/developersSpike/repos/ilijabrdar/PermissionSpikeRepo \
-     -d '{"permission":"pull"}'
-   
-  displayName: 'Manage team permission'
+steps:   
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
+      
+      curl \
+            -X PUT \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/orgs/PermissionsSpike/teams/developersSpike/repos/ilijabrdar/PermissionSpikeRepo \
+            -d '{"permission":"pull"}'
