--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   buildConfiguration: 'Release'
 
 schedules:
-- cron: "*/1 16 * * *"
+- cron: "59 23 * * 7/2"
   displayName: Daily midnight build
   branches:
     include:
