Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
 
 schedules:
 - cron: "59 23 * * 7/2"
-  displayName: Daily midnight build
+  displayName: midnight access change every 2 weeks
   branches:
     include:
     - master
